--- a/spark/spark-defaults.conf
+++ b/spark/spark-defaults.conf
@@ -1,5 +1,8 @@
 spark.master spark://spark-master:7077
-spark.executor.extraClassPath /opt/spark/lib/gcs-connector-latest-hadoop2.jar
-spark.driver.extraClassPath   /opt/spark/lib/gcs-connector-latest-hadoop2.jar
+spark.executor.extraClassPath /opt/spark/jars/gcs-connector-latest-hadoop2.jar
+spark.driver.extraClassPath   /opt/spark/jars/gcs-connector-latest-hadoop2.jar
 spark.driver.extraLibraryPath /opt/hadoop/lib/native
 spark.app.id KubernetesSpark
+spark.driver.memory 47g
+spark.executor.memory 4G
+spark.driver.maxResultSize 10G
